k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-devops
  labels:
    app: hello-devops
