k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-devops
  namespace: hello-devops
  labels:
    app: hello-devops
spec:
  type: ClusterIP
  selector:
    app: hello-devops    # matches POD labels, not the Deployment name
  ports:
    - name: http
      port: 80           # the port the Service listens on
      targetPort: 8000   # the port the container listens on
      protocol: TCP
