k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-devops
  namespace: hello-devops
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: hello.marvinbackup.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-devops
                port:
                  number: 80
